@@ -1,6 +1,7 @@
 Revision history for Test-EOL
 
     - Fix test fails on < 5.8 perls
+    - Fix t/13-latin1.t failures on Win32 and under TB1.5
 
 1.0  2012-01-05
     - Fix misleading test failure diagnostics when only issue are
